created secondary and subheaders

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,6 +3,7 @@ body {
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+/* HEADINGS*/
 
 .header--main {
     font-weight: normal;
@@ -10,6 +11,19 @@ body {
     color: #fff;
 }
 
+.header--secondary {
+    color: #fff;
+    font-weight: 300;
+    font-size: 42px;
+}
+
+.header--sub-header {
+    color: grey;
+    font-weight: 300;
+    font-size: 21px;
+}
+
+/* LINKS*/
 .link--cta {
     font-size: 16px;
     color: aquamarine;
